<resources>
    <!--home-->
    <string name="app_name">XSTW 助手</string>
    <string name="home_title">XSTW 智能管理助手</string>
    <string name="scan">扫一扫</string>
    <string name="scan_failure">该二维码与可用设备不匹配！</string>
    <string name="bluetooth_on">已打开</string>
    <string name="bluetooth_off">已关闭</string>
    <string name="bluetooth_unavaiable">不可用</string>
    <string name="bluetooth_scan">正在搜索附件可用设备</string>
    <string name="bluetooth_connect_failure">连接失败，请重试！</string>
    <string name="bluetooth_disconnect">设备蓝牙已断开</string>
    <string name="bluetooth_reconnect">设备蓝牙已断开，尝试重连中。</string>
    <string name="bluetooth_refresh">下拉刷新，重新搜索可用设备</string>
    <string name="retry">重试</string>
    <string name="exit">退出</string>
    <string name="cancel">取消</string>
    <string name="confirm">是的</string>
    <!--device-->
    <string name="realtime">测量</string>
    <string name="parameter">参数</string>
    <string name="control">控制</string>
    <string name="log">记录</string>
    <string name="ota">维护</string>
    <string name="more">更多</string>
    <string name="detail">详情</string>
    <!--device-ats-->
    <string name="status">电网状态</string>
    <string name="workmode">工作模式</string>
    <string name="systemerror">系统故障</string>
    <string name="powererror1">I电故障</string>
    <string name="powererror2">II电故障</string>
    <string name="normal">正常</string>
    <string name="source1">I电</string>
    <string name="source2">II电</string>
    <string name="linevoltage">线电压(V)</string>
    <string name="voltageunblance">相电压不平衡值(%)</string>
    <string name="other">其他</string>
    <string name="ua1">Ua</string>
    <string name="ub1">Ub</string>
    <string name="uc1">Uc</string>
    <string name="uab1">Uab</string>
    <string name="ubc1">Ubc</string>
    <string name="uca1">Uca</string>
    <string name="uuna1">A相</string>
    <string name="uunb1">B相</string>
    <string name="uunc1">C相</string>
    <string name="uunmax1">最大值</string>
    <string name="f1">频率(Hz)</string>
    <string name="phase1">相序</string>
    <string name="phopen">断相</string>
    <string name="phabc">正序·ABC</string>
    <string name="phacb">逆序·ACB</string>
    <string name="ua2">Ua</string>
    <string name="ub2">Ub</string>
    <string name="uc2">Uc</string>
    <string name="uab2">Uab</string>
    <string name="ubc2">Ubc</string>
    <string name="uca2">Uca</string>
    <string name="uuna2">A相</string>
    <string name="uunb2">B相</string>
    <string name="uunc2">C相</string>
    <string name="uunmax2">最大值</string>
    <string name="f2">频率(Hz)</string>
    <string name="phase2">相序</string>
    <string name="generator">油机</string>
    <string name="allpower">全电</string>
    <string name="action">拒动</string>
    <string name="trip">脱扣</string>
    <string name="parallel">手动并联</string>
    <string name="openphase">断相</string>
    <string name="novoltage">失压</string>
    <string name="undervoltage">欠压</string>
    <string name="overvoltage">过压</string>
    <string name="underfrequency">欠频</string>
    <string name="overfrequency">过频</string>
    <string name="unblance">不平衡</string>
    <string name="reversephase">逆序</string>
    <string name="systemconfig">系统参数</string>
    <string name="unw">额定电压(V)</string>
    <string name="un400">400/230</string>
    <string name="un415">415/240</string>
    <string name="fnw">额定频率(Hz)</string>
    <string name="switchingtype">系统类型</string>
    <string name="powersupply">供电方式</string>
    <string name="psgg">电网-电网</string>
    <string name="linepriority">主用侧</string>
    <string name="lp1">I电</string>
    <string name="lp2">II电</string>
    <string name="lp3">III电</string>
    <string name="lpall">全电</string>
    <string name="lp12">I&#038;II电</string>
    <string name="deviceconfig">设备参数</string>
    <string name="switchingctrl">操作方式</string>
    <string name="scauto">自动</string>
    <string name="scmanual">手动</string>
    <string name="switchingmode">转换模式</string>
    <string name="smautoback">自投自复</string>
    <string name="smmanualback">自投不复</string>
    <string name="firemode">消防模式</string>
    <string name="manualparallel">手动并联</string>
    <string name="noneparallel">手动不并联</string>
    <string name="di1">可编程输入1</string>
    <string name="di2">可编程输入2</string>
    <string name="di3">可编程输入3</string>
    <string name="fire">消防</string>
    <string name="comm">通信参数(只读)</string>
    <string name="commmode">方式</string>
    <string name="ctrlmode">模式</string>
    <string name="local">本地</string>
    <string name="remote">远程</string>
    <string name="protocol">协议</string>
    <string name="busaddress">通信地址</string>
    <string name="baudrate">波特率(bps)</string>
    <string name="parity">奇偶校验</string>
    <string name="none">无·None</string>
    <string name="odd">奇校验·Odd</string>
    <string name="even">偶校验·Even</string>
    <string name="stopbit">停止位</string>
    <string name="loraworknum">网络号</string>
    <string name="loratransaddr">透传地址</string>
    <string name="loradeviceid">设备ID</string>
    <string name="switchingparam">转换参数：阈值、延时、并联条件</string>
    <string name="voltagetreshhold">电压阈值</string>
    <string name="ul">欠压切换(%Un)</string>
    <string name="ulr">欠压返回(%Un)</string>
    <string name="uo">过压切换(%Un)</string>
    <string name="uor">过压返回(%Un)</string>
    <string name="frequencytreshhold">频率阈值</string>
    <string name="freqswitch">功能开关</string>
    <string name="freqswitch_on">开</string>
    <string name="freqswitch_off">关</string>
    <string name="fl">欠频切换(%Fn)</string>
    <string name="flr">欠频返回(%Fn)</string>
    <string name="fo">过频切换(%Fn)</string>
    <string name="foreturn">过频返回(%Fn)</string>
    <string name="unblancetreshhold">不平衡阈值</string>
    <string name="uunswitch">功能开关</string>
    <string name="uun">不平衡切换(%)</string>
    <string name="uunr">不平衡返回(%)</string>
    <string name="phaseprotect">逆序保护</string>
    <string name="phaseswitch">功能开关</string>
    <string name="delay">延时</string>
    <string name="qs1offt">QS1分闸延时(s)</string>
    <string name="qs1ont">QS1合闸延时(s)</string>
    <string name="qs2offt">QS2分闸延时(s)</string>
    <string name="qs2ont">QS2合闸延时(s)</string>
    <string name="qtofft">QT分闸延时(s)</string>
    <string name="qtont">QT合闸延时(s)</string>
    <string name="parallelcondition">手动并联条件</string>
    <string name="dvu">电压差值·ΔU(V)</string>
    <string name="dvf">频率差值·ΔF(Hz)</string>
    <string name="dvp">相位差值·ΔΦ(°)</string>
    <string name="farctrl">远程投切</string>
    <string name="trsflog">转换记录</string>
    <string name="alarmlog">报警记录</string>
    <string name="eventlog">变位记录</string>
    <string name="version">当前软件版本</string>
    <string name="time">时钟校准</string>
    <string name="localtime">当地时间</string>
    <string name="devicetime">设备时间</string>
    <string name="otaalert">当前版本已为最新</string>
    <string name="updating">正在修改</string>
    <string name="update">修改参数</string>
    <string name="updated">修改完成</string>
    <string name="update_confirm">确定修改吗？</string>
    <string name="password_title">设备密码</string>
    <string name="password_error">密码错误</string>
    <string name="locallocked">此设备设定为【本地】模式，不能远程控制</string>
    <string name="denied">操作失败！</string>
    <string name="steparraytip">范围：%1$d~%2$d，步长：%3$d</string>
    <string name="stepinputerror">输入数值不在允许的范围内！</string>
    <string name="dangerous">危险</string>
    <string name="dangerous_content">如果不能保证该操作的安全性，请不要继续，以免造成安全事故及财产损失！</string>
    <string name="localmanual">手动模式(按键/IO输入控制)</string>
    <string name="remotemanual">手动模式(远程通信控制)</string>
    <string name="autobackauto">自动模式(自投自复)</string>
    <string name="manualbackauto">自动模式(自投不复)</string>
    <string name="manualaction">人为操作</string>
    <string name="errortrip">故障脱扣</string>
    <string name="logtitle">记录 %1$s</string>
    <string name="logdetail">记录详情</string>
    <string name="logtime">时间</string>
    <string name="logtype">类型</string>
    <string name="logstate">状态</string>
    <string name="logthreshold">阈值</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>